force-app/main/default/objects/Specification_Version_to_Assembly__c/Specification_Version_to_Assembly__c.object-meta.xml
<CustomObject>
    <label>Specification Version to Assembly</label>
    <nameField>
        <displayFormat>SVA-{000000}</displayFormat>
        <label>Specification Version to Assembly Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Specification Versions to Assemblies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>