force-app/main/default/objects/Specification_Version_to_Assembly__c/fields/Assembly__c.field-meta.xml
<CustomField>
    <fullName>Assembly__c</fullName>
    <label>Assembly Relation</label>
    <referenceTo>WheelAssembly__c</referenceTo>
    <relationshipLabel>Specification Versions</relationshipLabel>
    <relationshipName>Specification_Versions_to_Assemblies</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>