force-app/main/default/objects/Specification_Version_to_Assembly__c/fields/AssemblyTxt__c.field-meta.xml
<CustomField>
    <fullName>AssemblyTxt__c</fullName>
    <formula>IF(Specification_Version__r.SpecBase__r.Country__r.Name=&apos;Ukraine&apos;,  Assembly__r.NameUKR__c,  Assembly__r.NameENG__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assembly</label>
    <type>Text</type>
</CustomField>