force-app/main/default/objects/Specification_Version_to_Assembly__c/fields/Specification_Version__c.field-meta.xml
<CustomField>
    <fullName>Specification_Version__c</fullName>
    <label>Specification Version</label>
    <referenceTo>SpecVersion__c</referenceTo>
    <relationshipLabel>Assemblies</relationshipLabel>
    <relationshipName>Specification_Versions_to_Assemblies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>